--- a/Rebuc/Base.lproj/Main.storyboard
+++ b/Rebuc/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Rebuc" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,5 +27,115 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="15Y-1w-Fv9">
+            <objects>
+                <viewController id="Hxp-Ka-j9I" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="x8K-1L-6Hk"/>
+                        <viewControllerLayoutGuide type="bottom" id="P4K-za-dmT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BHn-1t-7Oy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7VF-o6-sta" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="916" y="501"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="nb1-cS-ocw">
+            <objects>
+                <viewController id="40Q-pN-hdr" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="i95-0v-96Z"/>
+                        <viewControllerLayoutGuide type="bottom" id="nBa-or-Fzb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gbZ-90-raf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rebuc-logo" translatesAutoresizingMaskIntoConstraints="NO" id="OsQ-sd-NB3">
+                                <rect key="frame" x="0.0" y="20" width="375" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="qRI-No-pHI"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Correo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TSF-H1-0Dd">
+                                <rect key="frame" x="16" y="220" width="234" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vod-tH-UcC">
+                                <rect key="frame" x="16" y="270" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ucol.mx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ad-5i-lzL">
+                                <rect key="frame" x="260" y="225" width="99" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="99" id="HNo-83-POr"/>
+                                    <constraint firstAttribute="height" constant="21" id="sjX-x3-xnu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nXv-4X-yk2">
+                                <rect key="frame" x="16" y="343" width="343" height="45"/>
+                                <color key="backgroundColor" red="0.22254091692021205" green="0.64776332487309651" blue="0.32702068796117478" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="cx1-y5-Aef"/>
+                                </constraints>
+                                <state key="normal" title="ENTRAR">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jML-sR-DIo">
+                                <rect key="frame" x="16" y="412" width="343" height="45"/>
+                                <color key="backgroundColor" red="0.27160237411561322" green="0.79056947969543145" blue="0.39911579616174964" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="OJ5-Pk-ehC"/>
+                                </constraints>
+                                <state key="normal" title="CREAR CUENTA">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2Ad-5i-lzL" firstAttribute="centerY" secondItem="TSF-H1-0Dd" secondAttribute="centerY" id="2kS-qd-a5R"/>
+                            <constraint firstItem="TSF-H1-0Dd" firstAttribute="top" secondItem="OsQ-sd-NB3" secondAttribute="bottom" constant="50" id="EKr-Of-rOT"/>
+                            <constraint firstItem="OsQ-sd-NB3" firstAttribute="top" secondItem="i95-0v-96Z" secondAttribute="bottom" id="Fc4-sY-UZj"/>
+                            <constraint firstItem="jML-sR-DIo" firstAttribute="top" secondItem="nXv-4X-yk2" secondAttribute="bottom" constant="24" id="HdK-TV-cSw"/>
+                            <constraint firstItem="jML-sR-DIo" firstAttribute="centerX" secondItem="gbZ-90-raf" secondAttribute="centerX" id="Kkv-Nn-hKs"/>
+                            <constraint firstItem="OsQ-sd-NB3" firstAttribute="leading" secondItem="gbZ-90-raf" secondAttribute="leading" id="WfX-f9-uTw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="jML-sR-DIo" secondAttribute="trailing" id="Zso-FF-iyJ"/>
+                            <constraint firstItem="TSF-H1-0Dd" firstAttribute="leading" secondItem="gbZ-90-raf" secondAttribute="leadingMargin" id="a1W-TG-Cnp"/>
+                            <constraint firstItem="jML-sR-DIo" firstAttribute="leading" secondItem="gbZ-90-raf" secondAttribute="leadingMargin" id="iiK-0C-xsS"/>
+                            <constraint firstAttribute="trailing" secondItem="OsQ-sd-NB3" secondAttribute="trailing" id="jXM-O9-ciu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nXv-4X-yk2" secondAttribute="trailing" id="mIl-a3-4wR"/>
+                            <constraint firstItem="vod-tH-UcC" firstAttribute="top" secondItem="TSF-H1-0Dd" secondAttribute="bottom" constant="20" id="t5V-e5-4Bh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vod-tH-UcC" secondAttribute="trailing" id="tyv-wX-0nS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2Ad-5i-lzL" secondAttribute="trailing" id="u8b-Ui-w06"/>
+                            <constraint firstItem="2Ad-5i-lzL" firstAttribute="leading" secondItem="TSF-H1-0Dd" secondAttribute="trailing" constant="10" id="vvS-QK-7Px"/>
+                            <constraint firstItem="nXv-4X-yk2" firstAttribute="leading" secondItem="gbZ-90-raf" secondAttribute="leadingMargin" id="y1x-T8-x8w"/>
+                            <constraint firstItem="nXv-4X-yk2" firstAttribute="top" secondItem="vod-tH-UcC" secondAttribute="bottom" constant="43" id="y31-3f-JNr"/>
+                            <constraint firstItem="vod-tH-UcC" firstAttribute="leading" secondItem="gbZ-90-raf" secondAttribute="leadingMargin" id="yIM-pP-LVz"/>
+                            <constraint firstItem="nXv-4X-yk2" firstAttribute="centerX" secondItem="gbZ-90-raf" secondAttribute="centerX" id="zLq-j6-Jqu"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ER4-fW-8kc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="916" y="-174.06296851574214"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="rebuc-logo" width="144" height="72"/>
+    </resources>
 </document>
