--- a/Rebuc/Base.lproj/Main.storyboard
+++ b/Rebuc/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -64,7 +64,7 @@
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Correo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TSF-H1-0Dd">
-                                <rect key="frame" x="16" y="220" width="234" height="30"/>
+                                <rect key="frame" x="16" y="220" width="257.5" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -76,9 +76,8 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ucol.mx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ad-5i-lzL">
-                                <rect key="frame" x="260" y="225" width="99" height="21"/>
+                                <rect key="frame" x="283.5" y="225" width="75.5" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="99" id="HNo-83-POr"/>
                                     <constraint firstAttribute="height" constant="21" id="sjX-x3-xnu"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -112,7 +111,6 @@
                             <constraint firstItem="TSF-H1-0Dd" firstAttribute="top" secondItem="OsQ-sd-NB3" secondAttribute="bottom" constant="50" id="EKr-Of-rOT"/>
                             <constraint firstItem="OsQ-sd-NB3" firstAttribute="top" secondItem="i95-0v-96Z" secondAttribute="bottom" id="Fc4-sY-UZj"/>
                             <constraint firstItem="jML-sR-DIo" firstAttribute="top" secondItem="nXv-4X-yk2" secondAttribute="bottom" constant="24" id="HdK-TV-cSw"/>
-                            <constraint firstItem="jML-sR-DIo" firstAttribute="centerX" secondItem="gbZ-90-raf" secondAttribute="centerX" id="Kkv-Nn-hKs"/>
                             <constraint firstItem="OsQ-sd-NB3" firstAttribute="leading" secondItem="gbZ-90-raf" secondAttribute="leading" id="WfX-f9-uTw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="jML-sR-DIo" secondAttribute="trailing" id="Zso-FF-iyJ"/>
                             <constraint firstItem="TSF-H1-0Dd" firstAttribute="leading" secondItem="gbZ-90-raf" secondAttribute="leadingMargin" id="a1W-TG-Cnp"/>
@@ -126,7 +124,6 @@
                             <constraint firstItem="nXv-4X-yk2" firstAttribute="leading" secondItem="gbZ-90-raf" secondAttribute="leadingMargin" id="y1x-T8-x8w"/>
                             <constraint firstItem="nXv-4X-yk2" firstAttribute="top" secondItem="vod-tH-UcC" secondAttribute="bottom" constant="43" id="y31-3f-JNr"/>
                             <constraint firstItem="vod-tH-UcC" firstAttribute="leading" secondItem="gbZ-90-raf" secondAttribute="leadingMargin" id="yIM-pP-LVz"/>
-                            <constraint firstItem="nXv-4X-yk2" firstAttribute="centerX" secondItem="gbZ-90-raf" secondAttribute="centerX" id="zLq-j6-Jqu"/>
                         </constraints>
                     </view>
                 </viewController>
