--- a/Rebuc/Base.lproj/Main.storyboard
+++ b/Rebuc/Base.lproj/Main.storyboard
@@ -38,7 +38,87 @@
                     <view key="view" contentMode="scaleToFill" id="BHn-1t-7Oy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombres" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pCh-F0-CkA">
+                                <rect key="frame" x="16" y="35" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Apellido Paterno" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8oG-sw-d0z">
+                                <rect key="frame" x="16" y="80" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Apellido Materno" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cBr-Xd-1gL">
+                                <rect key="frame" x="16" y="125" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lwE-at-HSF">
+                                <rect key="frame" x="16" y="170" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lmO-Ow-fAO">
+                                <rect key="frame" x="16" y="215" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirmar contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9vS-vO-MTG">
+                                <rect key="frame" x="16" y="260" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Dependencia" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SXA-KD-25Q">
+                                <rect key="frame" x="16" y="305" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mak-v8-ufL">
+                                <rect key="frame" x="16" y="385" width="343" height="45"/>
+                                <color key="backgroundColor" red="0.22352941176470587" green="0.64776332487309651" blue="0.32702068796117478" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="mzT-hM-Bvd"/>
+                                </constraints>
+                                <state key="normal" title="Registrarse">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="mak-v8-ufL" firstAttribute="leading" secondItem="SXA-KD-25Q" secondAttribute="leading" id="8Z3-rO-wg1"/>
+                            <constraint firstItem="lwE-at-HSF" firstAttribute="leading" secondItem="cBr-Xd-1gL" secondAttribute="leading" id="8kk-f6-ESP"/>
+                            <constraint firstItem="lmO-Ow-fAO" firstAttribute="leading" secondItem="lwE-at-HSF" secondAttribute="leading" id="C3u-za-Lbu"/>
+                            <constraint firstItem="8oG-sw-d0z" firstAttribute="leading" secondItem="pCh-F0-CkA" secondAttribute="leading" id="H4R-4L-FEK"/>
+                            <constraint firstItem="mak-v8-ufL" firstAttribute="top" secondItem="SXA-KD-25Q" secondAttribute="bottom" constant="50" id="IF2-Oj-aFf"/>
+                            <constraint firstItem="mak-v8-ufL" firstAttribute="trailing" secondItem="SXA-KD-25Q" secondAttribute="trailing" id="LjI-x5-CHa"/>
+                            <constraint firstItem="pCh-F0-CkA" firstAttribute="top" secondItem="x8K-1L-6Hk" secondAttribute="bottom" constant="15" id="PYJ-qV-WAw"/>
+                            <constraint firstItem="cBr-Xd-1gL" firstAttribute="trailing" secondItem="8oG-sw-d0z" secondAttribute="trailing" id="TIK-SG-iQG"/>
+                            <constraint firstItem="9vS-vO-MTG" firstAttribute="top" secondItem="lmO-Ow-fAO" secondAttribute="bottom" constant="15" id="V4x-Yn-NY4"/>
+                            <constraint firstItem="lwE-at-HSF" firstAttribute="trailing" secondItem="cBr-Xd-1gL" secondAttribute="trailing" id="VNz-Yw-HDz"/>
+                            <constraint firstItem="8oG-sw-d0z" firstAttribute="top" secondItem="pCh-F0-CkA" secondAttribute="bottom" constant="15" id="XDB-Bf-Kwf"/>
+                            <constraint firstItem="9vS-vO-MTG" firstAttribute="trailing" secondItem="lmO-Ow-fAO" secondAttribute="trailing" id="eLY-fg-rwt"/>
+                            <constraint firstItem="SXA-KD-25Q" firstAttribute="top" secondItem="9vS-vO-MTG" secondAttribute="bottom" constant="15" id="h8E-CF-Mrk"/>
+                            <constraint firstItem="SXA-KD-25Q" firstAttribute="trailing" secondItem="9vS-vO-MTG" secondAttribute="trailing" id="jjI-R1-eHl"/>
+                            <constraint firstItem="SXA-KD-25Q" firstAttribute="leading" secondItem="9vS-vO-MTG" secondAttribute="leading" id="k5h-0H-lCu"/>
+                            <constraint firstItem="lwE-at-HSF" firstAttribute="top" secondItem="cBr-Xd-1gL" secondAttribute="bottom" constant="15" id="mpm-Lk-E6C"/>
+                            <constraint firstItem="pCh-F0-CkA" firstAttribute="leading" secondItem="BHn-1t-7Oy" secondAttribute="leadingMargin" id="oGK-XV-ZsS"/>
+                            <constraint firstItem="lmO-Ow-fAO" firstAttribute="trailing" secondItem="lwE-at-HSF" secondAttribute="trailing" id="p8M-kc-TyH"/>
+                            <constraint firstItem="9vS-vO-MTG" firstAttribute="leading" secondItem="lmO-Ow-fAO" secondAttribute="leading" id="po7-CE-ooF"/>
+                            <constraint firstItem="cBr-Xd-1gL" firstAttribute="leading" secondItem="8oG-sw-d0z" secondAttribute="leading" id="qKK-oL-iZH"/>
+                            <constraint firstItem="8oG-sw-d0z" firstAttribute="trailing" secondItem="pCh-F0-CkA" secondAttribute="trailing" id="uGQ-z3-28x"/>
+                            <constraint firstItem="lmO-Ow-fAO" firstAttribute="top" secondItem="lwE-at-HSF" secondAttribute="bottom" constant="15" id="xlX-gK-0ED"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pCh-F0-CkA" secondAttribute="trailing" id="zHp-ml-NWf"/>
+                            <constraint firstItem="cBr-Xd-1gL" firstAttribute="top" secondItem="8oG-sw-d0z" secondAttribute="bottom" constant="15" id="zgU-N7-HGr"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7VF-o6-sta" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -76,7 +156,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ucol.mx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ad-5i-lzL">
-                                <rect key="frame" x="283.5" y="225" width="75.5" height="21"/>
+                                <rect key="frame" x="283.5" y="224.5" width="75.5" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="sjX-x3-xnu"/>
                                 </constraints>
@@ -90,7 +170,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="cx1-y5-Aef"/>
                                 </constraints>
-                                <state key="normal" title="ENTRAR">
+                                <state key="normal" title="Entrar">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
@@ -100,7 +180,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="OJ5-Pk-ehC"/>
                                 </constraints>
-                                <state key="normal" title="CREAR CUENTA">
+                                <state key="normal" title="Crear cuenta">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
