--- a/Rebuc/Authentication.storyboard
+++ b/Rebuc/Authentication.storyboard
@@ -11,10 +11,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Sign Up View Controller-->
         <scene sceneID="AO0-Mn-JKz">
             <objects>
-                <viewController storyboardIdentifier="SignUpViewController" id="hjs-r2-Ftd" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SignUpViewController" id="hjs-r2-Ftd" customClass="SignUpViewController" customModule="Rebuc" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Cyx-uY-nrk"/>
                         <viewControllerLayoutGuide type="bottom" id="wAS-p3-Px2"/>
@@ -110,10 +110,10 @@
             </objects>
             <point key="canvasLocation" x="1580" y="-174"/>
         </scene>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="qCN-9e-z5z">
             <objects>
-                <viewController storyboardIdentifier="LoginViewController" id="NtA-X2-T57" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="NtA-X2-T57" customClass="LoginViewController" customModule="Rebuc" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zOn-dZ-fay"/>
                         <viewControllerLayoutGuide type="bottom" id="2IB-e7-tAU"/>
