--- a/Rebuc/Tickets.storyboard
+++ b/Rebuc/Tickets.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Tickets List View Controller-->
         <scene sceneID="6cf-YQ-VwG">
             <objects>
-                <viewController id="Wzp-ck-Gru" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TicketsViewController" id="Wzp-ck-Gru" customClass="TicketsListViewController" customModule="Rebuc" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kIR-Pg-xhW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
