--- a/Rebuc/Tickets.storyboard
+++ b/Rebuc/Tickets.storyboard
@@ -17,13 +17,68 @@
                     <view key="view" contentMode="scaleToFill" id="kIR-Pg-xhW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gov-kP-M3f">
+                                <rect key="frame" x="0.0" y="58" width="375" height="609"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ticketCell" textLabel="Kay-iY-uOG" detailTextLabel="kh7-nJ-2S5" style="IBUITableViewCellStyleSubtitle" id="7be-YS-DhG">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7be-YS-DhG" id="Ku4-Jg-jw9">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Kay-iY-uOG">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kh7-nJ-2S5">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R3e-ek-woR">
+                                <rect key="frame" x="0.0" y="20" width="375" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Crear Ticket">
+                                    <color key="titleColor" red="0.2225409169" green="0.64776332489999999" blue="0.327020688" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createTicket:" destination="Wzp-ck-Gru" eventType="touchUpInside" id="Qv8-57-21z"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="LMH-mw-2nK" firstAttribute="trailing" secondItem="R3e-ek-woR" secondAttribute="trailing" id="85h-tE-Qym"/>
+                            <constraint firstItem="R3e-ek-woR" firstAttribute="leading" secondItem="LMH-mw-2nK" secondAttribute="leading" id="A4t-Gi-dvJ"/>
+                            <constraint firstItem="Gov-kP-M3f" firstAttribute="top" secondItem="R3e-ek-woR" secondAttribute="bottom" constant="5" id="Sf3-NQ-VKt"/>
+                            <constraint firstItem="LMH-mw-2nK" firstAttribute="trailing" secondItem="Gov-kP-M3f" secondAttribute="trailing" id="Tf3-ZT-aQY"/>
+                            <constraint firstItem="R3e-ek-woR" firstAttribute="centerX" secondItem="kIR-Pg-xhW" secondAttribute="centerX" id="drY-u8-QhM"/>
+                            <constraint firstItem="LMH-mw-2nK" firstAttribute="bottom" secondItem="Gov-kP-M3f" secondAttribute="bottom" id="nuh-oM-u92"/>
+                            <constraint firstItem="Gov-kP-M3f" firstAttribute="leading" secondItem="LMH-mw-2nK" secondAttribute="leading" id="tfB-Og-VwW"/>
+                            <constraint firstItem="R3e-ek-woR" firstAttribute="top" secondItem="LMH-mw-2nK" secondAttribute="top" id="xTl-i6-dPq"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="LMH-mw-2nK"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="Gov-kP-M3f" id="SBQ-V1-wle"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uJV-Bp-uyl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-258" y="175"/>
+            <point key="canvasLocation" x="-258.39999999999998" y="174.96251874062969"/>
         </scene>
     </scenes>
 </document>
